[gd_scene load_steps=6 format=3 uid="uid://bx36nsgoh262s"]

[ext_resource type="Theme" uid="uid://cshqx4nywmt3o" path="res://resources/themes/nice_theme.tres" id="1_vxkiu"]
[ext_resource type="Script" uid="uid://c8ssrcrwm55gt" path="res://scripts/ui/login_page.gd" id="2_ahplj"]

[sub_resource type="LabelSettings" id="LabelSettings_vxkiu"]
font_size = 26
font_color = Color(0.835294, 0.8, 0.796078, 1)
outline_size = 6
outline_color = Color(0.205117, 0.205117, 0.205117, 1)
shadow_size = 18
shadow_color = Color(0, 0, 0, 0.796078)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ahplj"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_vxkiu"]
grow_begin = 30.0
grow_end = 30.0

[node name="LoginPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vxkiu")
script = ExtResource("2_ahplj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.708397, 0.57977, 0.552541, 1)

[node name="PlayOnlineContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -303.0
offset_top = -124.0
offset_right = 303.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PlayOnlineLabel" type="Label" parent="PlayOnlineContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Play Online"
label_settings = SubResource("LabelSettings_vxkiu")

[node name="LoginTabContainer" type="TabContainer" parent="PlayOnlineContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_ahplj")
current_tab = 0
clip_tabs = false
tabs_visible = false

[node name="NicknameContainer" type="VBoxContainer" parent="PlayOnlineContainer/LoginTabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PlayOnlineContainer/LoginTabContainer/NicknameContainer"]
layout_mode = 2
size_flags_vertical = 6
alignment = 1

[node name="NicknameLineEdit" type="LineEdit" parent="PlayOnlineContainer/LoginTabContainer/NicknameContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "enter nickname"

[node name="NicknameSubmitButton" type="Button" parent="PlayOnlineContainer/LoginTabContainer/NicknameContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.2
text = "GO"

[node name="NicknameTabLinksContainer" type="HBoxContainer" parent="PlayOnlineContainer/LoginTabContainer/NicknameContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_constants/separation = 6

[node name="OrLabel1" type="Label" parent="PlayOnlineContainer/LoginTabContainer/NicknameContainer/NicknameTabLinksContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "or"

[node name="LoginLinkButton" type="LinkButton" parent="PlayOnlineContainer/LoginTabContainer/NicknameContainer/NicknameTabLinksContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "login"

[node name="OrLabel2" type="Label" parent="PlayOnlineContainer/LoginTabContainer/NicknameContainer/NicknameTabLinksContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "or"

[node name="RegisterLinkButton" type="LinkButton" parent="PlayOnlineContainer/LoginTabContainer/NicknameContainer/NicknameTabLinksContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "register"

[node name="LoginContainer" type="VBoxContainer" parent="PlayOnlineContainer/LoginTabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="UsernameLineEdit" type="LineEdit" parent="PlayOnlineContainer/LoginTabContainer/LoginContainer"]
layout_mode = 2
size_flags_vertical = 6
placeholder_text = "enter username"

[node name="PasswordLineEdit" type="LineEdit" parent="PlayOnlineContainer/LoginTabContainer/LoginContainer"]
layout_mode = 2
size_flags_vertical = 6
placeholder_text = "enter password"
secret = true

[node name="LoginSubmitButton" type="Button" parent="PlayOnlineContainer/LoginTabContainer/LoginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "LOGIN"

[node name="LoginTabLinksContainer" type="HBoxContainer" parent="PlayOnlineContainer/LoginTabContainer/LoginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_constants/separation = 6

[node name="OrLabel1" type="Label" parent="PlayOnlineContainer/LoginTabContainer/LoginContainer/LoginTabLinksContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "or"

[node name="NicknameLinkButton" type="LinkButton" parent="PlayOnlineContainer/LoginTabContainer/LoginContainer/LoginTabLinksContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "nickname"

[node name="OrLabel2" type="Label" parent="PlayOnlineContainer/LoginTabContainer/LoginContainer/LoginTabLinksContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "or"

[node name="RegisterLinkButton" type="LinkButton" parent="PlayOnlineContainer/LoginTabContainer/LoginContainer/LoginTabLinksContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "register"

[node name="RegisterContainer" type="VBoxContainer" parent="PlayOnlineContainer/LoginTabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="UsernameLineEdit" type="LineEdit" parent="PlayOnlineContainer/LoginTabContainer/RegisterContainer"]
layout_mode = 2
size_flags_vertical = 6
placeholder_text = "enter username"

[node name="PasswordLineEdit" type="LineEdit" parent="PlayOnlineContainer/LoginTabContainer/RegisterContainer"]
layout_mode = 2
size_flags_vertical = 6
placeholder_text = "enter password"
secret = true

[node name="PasswordRepeatLineEdit" type="LineEdit" parent="PlayOnlineContainer/LoginTabContainer/RegisterContainer"]
layout_mode = 2
size_flags_vertical = 6
placeholder_text = "repeat password"
secret = true

[node name="RegisterSubmitButton" type="Button" parent="PlayOnlineContainer/LoginTabContainer/RegisterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "REGISTER"

[node name="RegisterTabLinksContainer" type="HBoxContainer" parent="PlayOnlineContainer/LoginTabContainer/RegisterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_constants/separation = 6

[node name="OrLabel1" type="Label" parent="PlayOnlineContainer/LoginTabContainer/RegisterContainer/RegisterTabLinksContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "or"

[node name="LoginLinkButton" type="LinkButton" parent="PlayOnlineContainer/LoginTabContainer/RegisterContainer/RegisterTabLinksContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "login"

[node name="OrLabel2" type="Label" parent="PlayOnlineContainer/LoginTabContainer/RegisterContainer/RegisterTabLinksContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "or"

[node name="NicknameLinkButton" type="LinkButton" parent="PlayOnlineContainer/LoginTabContainer/RegisterContainer/RegisterTabLinksContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "nickname"

[node name="PlayLocalContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -52.0
offset_right = 51.0
grow_horizontal = 2
grow_vertical = 0

[node name="HSeparator" type="HSeparator" parent="PlayLocalContainer"]
custom_minimum_size = Vector2(0, 9.785)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_vxkiu")

[node name="PlayLocalButton" type="Button" parent="PlayLocalContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Play Local"

[connection signal="pressed" from="PlayOnlineContainer/LoginTabContainer/NicknameContainer/HBoxContainer/NicknameSubmitButton" to="." method="_on_nickname_submit_button_pressed"]
[connection signal="pressed" from="PlayOnlineContainer/LoginTabContainer/NicknameContainer/NicknameTabLinksContainer/LoginLinkButton" to="." method="_on_login_link_button_pressed"]
[connection signal="pressed" from="PlayOnlineContainer/LoginTabContainer/NicknameContainer/NicknameTabLinksContainer/RegisterLinkButton" to="." method="_on_register_link_button_pressed"]
[connection signal="pressed" from="PlayOnlineContainer/LoginTabContainer/LoginContainer/LoginSubmitButton" to="." method="_on_login_submit_button_pressed"]
[connection signal="pressed" from="PlayOnlineContainer/LoginTabContainer/LoginContainer/LoginTabLinksContainer/NicknameLinkButton" to="." method="_on_nickname_link_button_pressed"]
[connection signal="pressed" from="PlayOnlineContainer/LoginTabContainer/LoginContainer/LoginTabLinksContainer/RegisterLinkButton" to="." method="_on_register_link_button_pressed"]
[connection signal="pressed" from="PlayOnlineContainer/LoginTabContainer/RegisterContainer/RegisterSubmitButton" to="." method="_on_register_submit_button_pressed"]
[connection signal="pressed" from="PlayOnlineContainer/LoginTabContainer/RegisterContainer/RegisterTabLinksContainer/LoginLinkButton" to="." method="_on_login_link_button_pressed"]
[connection signal="pressed" from="PlayOnlineContainer/LoginTabContainer/RegisterContainer/RegisterTabLinksContainer/NicknameLinkButton" to="." method="_on_nickname_link_button_pressed"]
